--- a/Inventory-System/src/main/resources/application.properties
+++ b/Inventory-System/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+## Conexion MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/ ?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
 
+secret.key=PBKDF2WithHmacSHA1
